# MultiBoost

./: .gitignore  CMakeLists.txt  DP.hpp  DP_impl.hpp  DP_solver_ex.cpp  DP_solver_ex.hpp  LTSS.hpp  LTSS_impl.hpp  README.md  __CTX_TEST_EtxetnoC7txetnoCreifissa.cxt  arma_ex.cpp  benchmarks.cpp  classifier.hpp  classifier_impl.hpp  classifier_traits.hpp  classifiers.hpp  compositeclassifier.hpp  compositeclassifier_impl.hpp  compositeregressor.hpp  compositeregressor_impl.hpp  context_ex.cpp  createContext.cpp  createContextDecisionTreeClassifier.cpp  dataelement.cpp  dataelement.hpp  dataframe.cpp  dataframe.hpp  dataframe_impl.hpp  dataset.hpp  dataset_impl.hpp  decision_tree.hpp  format_code.sh  gradientboostclassifier.cpp  gradientboostclassifier.hpp  gradientboostclassifier_impl.hpp  gradientboostmulticlassifier.hpp  gradientboostmulticlassifier_impl.hpp  gradientboostregressor.cpp  gradientboostregressor.hpp  gtest_all.cpp  (+48 more)
.github/workflows/: build.yml
benchmarks/: #results_202308011.dat#
cpp/include/: classifier.hpp  classifier_impl.hpp  compositeModel.hpp  compositeclassifier.hpp  gradientboostregressor.hpp  gradientboostregressor_impl.hpp  model.hpp  regressor.hpp  regressor_pmlb_driver.hpp  replay_impl.hpp  spinlock.hpp  virtualstring.hpp
cpp/src/: CMakeLists.txt  DP_solver_ex.cpp  arma_ex.cpp  compositeregressor.cpp  createContext.cpp  gradientboostclassifier.cpp  regressor.cpp  replay_predict_stepwise.cpp  stepwise_classify.cpp  threadsafequeue.cpp  utils.cpp
db/: DB_CREATE.sql  db.py
docker/: README_API.md  api_server.py  dockerfile  example_params_class.json  example_params_reg.json  incremental_classifier_fit.sh  s3_download_helper.py
docker/Data/Classification/: synthetic_test_X.csv  synthetic_test_y.csv  synthetic_train_X.csv  synthetic_train_y.csv
docker/Data/Regression/: synthetic_test_X.csv  synthetic_test_y.csv  synthetic_train_X.csv  synthetic_train_y.csv
src/cpp/: Doxyfile
src/cpp/include/: .#compositeclassifier_impl.hpp  .#replay_impl.hpp  DP.hpp  DP_impl.hpp  DP_solver_ex.hpp  OOS_classify.hpp  OOS_predict.hpp  analytic_utils.hpp  classifier.hpp  classifier_impl.hpp  classifier_loss.hpp  classifier_loss_impl.hpp  classifiers.hpp  classifiers_impl.hpp  compositeModel.hpp  compositeclassifier.hpp  compositeclassifier_impl.hpp  compositemodel.hpp  compositemodel_impl.hpp  compositeregressor.hpp  compositeregressor_impl.hpp  constantclassifier.hpp  constantregressor.hpp  contextmanager.hpp  contextmanager_impl.hpp  gradientboostclassifier.hpp  gradientboostmulticlassifier.hpp  gradientboostmulticlassifier_impl.hpp  gradientboostregressor.hpp  gradientboostregressor_impl.hpp  incremental_classify.hpp  incremental_predict.hpp  loss.hpp  loss2.cpp  loss2.hpp  loss2_impl.hpp  loss_impl.hpp  model.hpp  model_traits.hpp  multiple_class_pmlb_driver.hpp  (+31 more)
src/cpp/src/: .#benchmarks.cpp  CMakeLists.txt  DP_solver_ex.cpp  OOS_classify.cpp  OOS_predict.cpp  analytic_utils.cpp  arma_ex.cpp  benchmark_threadpool.cpp  benchmarks.cpp  classifier_loss.cpp  compositeclassifier.cpp  contextmanager.cpp  createContext.cpp  create_context_classifier.cpp  create_context_from_JSON_classifier.cpp  create_context_from_JSON_regressor.cpp  create_context_from_json.cpp  create_context_regressor.cpp  gradientboostclassifier.cpp  gradientboostmulticlassifier.cpp  gtest_all.cpp  incremental_classify.cpp  incremental_predict.cpp  multiple_class_pmlb_driver.cpp  negativefeedback.cpp  pmlb.cpp  pmlb_regressor_driver.cpp  recursivemodel.cpp  regressor_loss.cpp  regressor_pmlb_driver.cpp  replay.cpp  replay_classify_stepwise.cpp  replay_predict_stepwise.cpp  s3_utils.cpp  score2.cpp  simple_regressor_test.cpp  single_class_pmlb_driver.cpp  stepwise_classify.cpp  stepwise_predict.cpp  test_regressor_decorators.cpp  (+4 more)
src/python/: classifier_comparison.py  data_grab.py  db.py  db_query.py  model_comparison.py  path_utils.py
src/rust/hyper_search/: Cargo.toml
src/rust/hyper_search/src/: main.rs
src/rust/hyper_search/src/mariadbext/: mod.rs
src/rust/hyper_search/src/model/: mod.rs
src/rust/hyper_search/src/mongodbext/: mod.rs
src/rust/studies/: Cargo.toml
src/script/: .#incremental_classifier_fit.sh  incremental_classifier_fit.sh  incremental_regressor_fit.sh  output.txt
src/sql/: DB_CREATE.sql
test_data/: buggyCrx_test_X.csv  buggyCrx_test_y.csv  buggyCrx_train_X.csv  buggyCrx_train_y.csv
test_data/Regression/: 606_fri_c2_1000_10_test_X.csv  606_fri_c2_1000_10_test_y.csv  606_fri_c2_1000_10_train_X.csv  606_fri_c2_1000_10_train_y.csv
