[package]
name = "hyper_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "classifier"
test = false
bench = false

[[bin]]
name = "regressor"
test = false
bench = false

[dependencies]
run_script = "0.10.1"
mysql = "*"
tokio = { version = "0.3", features = ["full"] }
mongodb = { version = "2.6.0", default-features = false, features = ["async-std-runtime"] }
serde = "1.0.125"
linfa = "0.6.0"
csv = "1.1"
ndarray = "0.15.6"
rand = "0.8.5"
lazy_static = "1.0"
regex = "1.9.1"

